turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: identifier expected but integer literal found.
  rule=Array[Array[Array[(1,0)(1,0)((1,'R',0)(0,'N',0)(1,'L',1)(0,'N',1))]]]
                          ^Turmite:64: error: ')' expected but '}' found.
} 
^